Archive2/6a/edd892f0c459c2/output
main.cpp:2:9: error: flexible array member 'arr' in otherwise empty struct is a GNU extension [-Werror,-Wgnu-empty-struct]
    int arr[];  
        ^
main.cpp:2:9: error: flexible array members are a C99 feature [-Werror,-Wc99-extensions]
2 errors generated.
